--- a/SreeragPortfolio.html
+++ b/SreeragPortfolio.html
@@ -25,7 +25,7 @@
                 editing </li><li>Making memes</li><li>Experimenting with blender
                 software</li></ul>
         <h4>For contacting me : </h4>
-        <ul><li>Phone : 9567572066</li><li>Email: sreeragm030@gmail.com</li><li><a
+        <ul><li>Phone : 956757xxxx</li><li>Email: sreeragxxxx@gmail.com</li><li><a
                     href="https://www.linkedin.com/in/sreerag-m-a17050225/">linkedin</a></li><li><a href="https://github.com/sreeragm333">GitHub</a></li></ul>
     </body>
 </html>
